fix(docs): prevent page zooming on iphone

--- a/docs/app/blocks/components/live-example-block/live-example-block.component.scss
+++ b/docs/app/blocks/components/live-example-block/live-example-block.component.scss
@@ -82,7 +82,6 @@
     }
 
     select {
-      font-size: 0.875rem;
       appearance: none;
     }
   }
